--- a/src/templates/SaltConfigDeployment.tpl.yml
+++ b/src/templates/SaltConfigDeployment.tpl.yml
@@ -9,12 +9,10 @@ spec:
   ports:
   - protocol: "TCP"
     name: com-ext
-    #nodePort: 32000
     targetPort: 4505
     port: 4505
   - protocol: "TCP"
     name: com-int
-    #nodePort: 32001
     targetPort: 4506
     port: 4506
   externalIPs:
@@ -36,16 +34,13 @@ spec:
       volumes:
       - name: test-volume
         hostPath:
-          path: /test2/config
+          path: /vm-salt-lab
       containers:
       - name: saltstack
-        image: mxrss/salt-stack
+        image: mxrss/salt-stack:gitfs
         volumeMounts:
           - mountPath: /etc/salt/test
             name: test-volume
         command: ["salt-master", "-l", "debug", "-c", "/etc/salt/test" ]
-        #args: [/etc/salt/test"]
-      environment:
-        name: MINIKUBE
-        value: {{ minikube_ip }}
+
        
